[package]
name = "belt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
chrono-tz = "0.8.3"
clap = "4.4.6"
clap_complete = "4.4.3"
clap_mangen = "0.2.14"
codespan-reporting = "0.11.1"
colored = "2.0.4"
console = "0.15.7"
crossterm = { version = "0.27.0", features = ["event-stream"] }
cursive = "0.20.0"
date_component = "0.4.1"
env_logger = "0.10.0"
indicatif = "0.17.7"
indicatif-log-bridge = "0.2.2"
inquire = "0.6.2"
is-terminal = "0.4.9"
log = "0.4.20"
prometheus = "0.13.3"
ratatui = { version = "0.23.0", features = ["all-widgets"] }
rustyline = "12.0.0"
tokio = "1.33.0"
tracing = "0.1.39"
tracing-opentelemetry = "0.21.0"
tracing-subscriber = "0.3.17"
whois-rust = "1.5.2"
whoisthere = "0.1.3"
