[package]
name = "belt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
chrono-tz = "0.8.3"
crossterm = { version = "0.27.0", features = ["event-stream"] }
date_component = "0.4.1"
ratatui = { version = "0.23.0", features = ["all-widgets"] }
tokio = "1.33.0"
whois-rust = "1.6.0"
whoisthere = "0.1.3"
